--- a/register-page.html
+++ b/register-page.html
@@ -45,7 +45,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../css/registerpagecss.css" />
+    <link rel="stylesheet" href="./css/registerpagecss.css" />
 
     <title>PURESTRENGTH LABS Register Page</title>
   </head>
