--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../css/indexcss.css" />
+    <link rel="stylesheet" href="./css/indexcss.css" />
 
     <title>PURESTRENGTH LABS Home Page</title>
   </head>
