--- a/index.html
+++ b/index.html
@@ -521,22 +521,22 @@
       <section id="quick-links">
         <h2>Quick Links</h2>
         <ul id="nav-quick-links">
-          <li><a href="../index.html" alt="Home Navigation">HOME</a></li>
+          <li><a href="./index.html" alt="Home Navigation">HOME</a></li>
             <span class="seperator">|</span>
           <li>
-            <a href="../index.html#top-picks" alt="Top Picks Navigation"
+            <a href="./index.html#top-picks" alt="Top Picks Navigation"
               >TOP PICKS</a
             >
           </li>
             <span class="seperator">|</span>
           <li>
-            <a href="../index.html#all-products" alt="Products Navigation"
+            <a href="./index.html#all-products" alt="Products Navigation"
               >PRODUCTS</a
             >
           </li>
             <span class="seperator">|</span>
           <li>
-            <a href="../index.html#contact-us" alt="Contact Us Navigation"
+            <a href="./index.html#contact-us" alt="Contact Us Navigation"
               >CONTACT US</a
             >
           </li>
